[gd_scene load_steps=4 format=3 uid="uid://c041wyp0jflut"]

[ext_resource type="Script" path="res://scripts/items/weapons/ninja_star_weapon.gd" id="1_is6dt"]
[ext_resource type="PackedScene" uid="uid://dlbf3vagww5rl" path="res://scenes/items/weapons/ninja_star.tscn" id="3_s5oe8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xana0"]
size = Vector2(13, 5)

[node name="ninja_star_weapon" type="Area2D"]
script = ExtResource("1_is6dt")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, -0.5)
shape = SubResource("RectangleShape2D_xana0")

[node name="ninja_star" parent="." instance=ExtResource("3_s5oe8")]

[node name="can_throw_timer" type="Timer" parent="."]
wait_time = 2.0

[connection signal="timeout" from="can_throw_timer" to="." method="_on_can_throw_timer_timeout"]
